# Vulkan-Experiment

./: CMakeLists.txt  README.md  vulkan_stuff.txt
include/: App.h  BufferData.h  Component.h  DescriptorSetsData.h  Entity.h  InstanceData.h  Keyboard.h  PipelineData.h  Scripting.h  SwapchainData.h  WindowData.h
src/: App.cpp  BufferData.cpp  Component.cpp  DescriptorSetsData.cpp  Entity.cpp  InstanceData.cpp  Keyboard.cpp  PipelineData.cpp  SwapchainData.cpp  WindowData.cpp  main.cpp
src/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
vendors/Vulkan-dep/Lib/: GenericCodeGen.lib  HLSL.lib  MachineIndependent.lib  OGLCompiler.lib  OSDependent.lib  SPIRV-Tools-link.lib  SPIRV-Tools-lint.lib  SPIRV-Tools-opt.lib  SPIRV-Tools-reduce.lib  SPIRV-Tools-shared.lib  SPIRV-Tools.lib  SPIRV.lib  SPVRemapper.lib  VkLayer_utils.lib  glslang-default-resource-limits.lib  glslang.lib  shaderc.lib  shaderc_combined.lib  shaderc_shared.lib  shaderc_util.lib  spirv-cross-c-shared.lib  spirv-cross-c.lib  spirv-cross-core.lib  spirv-cross-cpp.lib  spirv-cross-glsl.lib  spirv-cross-hlsl.lib  spirv-cross-msl.lib  spirv-cross-reflect.lib  spirv-cross-util.lib  vulkan-1.lib
vendors/glfw-3.3.4/lib/: glfw3.lib
